# SuearchHermes

./: .gitignore  AGENT_CONTRIBUTOR_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_es.md  README_zh.md  SECURITY.md  install.sh  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
plugins/web/agy/: __init__.py  oauth_provider.py  provider.py
